<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:theme="@style/Theme.MaterialComponents.Light"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/green_gradient">
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/logo"
            android:id="@+id/logoView"
            android:paddingTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:contentPadding="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/logoView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/landing_no_installation"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/black"
                    android:text="@string/landing_description"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/landing_install"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            app:cornerRadius="16dp"
            app:strokeColor="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@id/cardView"

            android:id="@+id/installButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>