<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainInstallationLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent"
        tools:theme="@style/Theme.MaterialComponents.Light"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/green_gradient"

    >
    <ImageView
            android:id="@+id/logsButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_article_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white"
            android:padding="16dp"/>

    <TextView
            android:id="@+id/progressTextView"
            android:text="0%"
            android:paddingTop="22dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="62sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:contentPadding="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/progressTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/progressList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Installation in progress"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:text="This might take a while depending on your network connection (Up to 10 minutes)"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.octo4a.ui.views.InstallationProgressItem
                android:id="@+id/bootstrapItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <com.octo4a.ui.views.InstallationProgressItem
                android:id="@+id/extractingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <com.octo4a.ui.views.InstallationProgressItem
                android:id="@+id/bootingOctoprintItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <com.octo4a.ui.views.InstallationProgressItem
                android:id="@+id/installationCompleteItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/installation_error"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/errorContentsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_marginTop="8dp"
                android:text="Error contents HERE"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_attach_log"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seeLogsButton"
                android:layout_width="match_parent"
                android:background="@color/cardview_light_background"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/see_logs"
                android:textStyle="bold"

                app:cornerRadius="16dp"


                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearDataAndRestart"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:textColor="#000"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/clear_data_and_restart"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/continueButton"
            android:text="Continue"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            app:cornerRadius="16dp"
            app:strokeColor="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@id/cardView"

    />

</androidx.constraintlayout.widget.ConstraintLayout>